# pdfmerge

./: .gitignore  LICENSE  merge.py  pyproject.toml  setup.cfg
src/pdfmerge/: __init__.py  __main__.py  merge.py
