[project]
name = "pdfmerge"
version = "0.0.1"
license = "MIT"
authors = [
  { name="Wesley Miller", email="wslmllr@gmail.com" },
]
description = "Merge PDFs on the command line"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = https://github.com/wesgm/pdfmerge