[project]
name = "pdfmerge"
version = "0.0.1"
license = "MIT"
authors = 
   name="Wesley Miller", email="wslmllr@gmail.com"
description = "Merge PDFs on the command line"
readme = "README.md"
requires-python = ">=3.7"
install_requires = PyPDF2 
[project.urls]
"Homepage" = https://github.com/wesgm/pdfmerge
[options.entry_points]
console_scripts = pdfmerge =  pdfmerge:merge 
